@@ -3,6 +3,8 @@ CHANGES IN FLTK 1.1.7
 	- Documentation fixes (STR #571, STR #648, STR #692, STR
 	  #730, STR #744, STR #745, STR #931, STR #942, STR #960,
 	  STR #969)
+	- Fl_Text_Display now auto-scrolls in all 
+	  directions (STR #915)
 	- Borderless windows will not show in the taskbar anymore
 	  on X11 (STR #933)
 	- Fixed event_text() field on FL_DND_* event on 
